fix overlap

--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,6 @@ body {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
-  float: right;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -221,6 +220,10 @@ nav {
 //
 // .main
 //
+
+.leftspace {
+	margin-left: 230px;
+}
 
 #main {
   display: flex;
